# passport-mrz-recognition

./: CMakeLists.txt  README.md  mrz.cpp  mrzcv.cpp
include/: DynamsoftCommon.h  DynamsoftLabelRecognition.h
platform/windows/lib/: DynamsoftLabelRecognitionx64.lib
template/: wholeImgMRZTemplate.json
